# chift-mcp

./: README.md  fastmcp.json  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: __main__.py  chift_wrapper.py  config.py  constants.py  models.py  utils.py
src/chift_mcp/: __main__.py  __test__.py  config.py  constants.py  http.py  http_client.py  main.py  mcp.py  middleware.py  prompts.py  proxy.py  route_maps.py  tools.py
src/chift_mcp/tools/: README.md  generator.py  toolkit.py
src/chift_mcp/tools/schema/: openapi.json
src/chift_mcp/utils/: importer.py  parse_openapi_deps.py  utils.py
src/openapi_spec/: parser.py
src/tools/: chift_mapper.py  generator.py  toolkit.py
src/tools/schema/: openapi.json
src/utils/: importer.py
tests/unit/: conftest.py  importer_test.py  test_middleware.py  test_tool_factory.py  test_tools.py  utils_test.py
